--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,11 @@
 footer {
-    bottom: 0;
-    height: 4rem;
-    width: 100%;
     position: absolute;
+    top: 1000px;
+    /* height: 4rem; */
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    /* position: absolute; */
+    /* position: fixed; */
     text-align: center;
     /* border-top: 1px solid black; */
     background-color: #04091e;
