--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
-*, ::after, ::before {
+* {
   box-sizing: border-box;
-}
+ }
+ 
+ *:before,
+ *:after {
+  box-sizing: border-box;
+ }
 
 .App {
   text-align: center;
+}
+
+.App {
+  min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 100px; /* height of your footer */
 }
 
 .App-logo {
