--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,8 @@
 footer {
     position: absolute;
-    top: 1000px;
+    /* top: 1000px; */
     /* height: 4rem; */
+    bottom: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     /* position: absolute; */
