--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@ body, {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  position: relative;
-  min-height: 100%;
+  /* position: relative; */
+  /* min-height: 100%; */
   /* height:100%; */
   margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
+html,
+body {
+ height: 100%;
+ position: relative;
 }
 
 code {
