Adding explanation modal to index page. Cleaning up views file. Changing some components to functional components. Changing some css styles.

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -22,8 +22,8 @@ input {
 }
 
 hr {
-    padding: 0px !important;
-    margin: 0px !important;    
+    padding: 10px 0px 10px 0px !important;
+    margin: 20px auto 0px auto !important;   
 }
 
 ul {
@@ -31,18 +31,23 @@ ul {
 }
 
 .section1 {
-    background-color: #A6E7FF !important;
+    /* background-color: #A6E7FF !important; */
+    background-color: #ffebd8 !important;
     padding: 20px 20px 0 20px !important;
 }
 
 .section2 {
     margin: 0;
-    background-color: rgb(255, 166, 166) !important;
+    background-color: #ffdaf9 !important;
     padding: 20px 20px 0 20px !important;
 }
 
 .section3 {
     margin: 0;
-    background-color: rgb(166, 255, 193) !important;
+    background-color: #d9fcfd !important;
     padding: 20px 20px 0 20px !important;
+}
+
+.section1, .section2, .section3 {
+    padding-bottom: 20px !important;
 }
