--- a/src/Components/Main/LoadingWheel/LoadingWheel.css
+++ b/src/Components/Main/LoadingWheel/LoadingWheel.css
@@ -1,20 +1,13 @@
 .spinnerContainer {
-    /* margin: 0 auto; */
-
-    padding: 25px 20px;
-    left: auto;
-    right: auto;
-    /* padding: 500px !important; */
-    background-color: white;
-    position: fixed;
-
-
-    width: 140px;
-    /* height:100px; */
-    position: fixed;
-    top: 50%;
-    left: 50%;
+    margin-top:-50px;
     margin-left:-70px;
-    margin-top:-50px;   
+    padding: 25px 20px;
+    top: 50%;
+    right: auto;
+    left: 50%;
+    width: 140px;
+    position: fixed;
+    background-color: white;
     border: 1px solid #000;
+    z-index: 99;
 }
