--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -8,6 +8,7 @@
     /* background-color: beige; */
     max-width: 800px;
     padding: 0px !important;
+    background-color: transparent !important;
 }
 
 .form-group {
@@ -33,23 +34,24 @@ ul {
 .section1 {
     /* background-color: #A6E7FF !important; */
     background-color: #ffebd8 !important;
-    padding: 20px 20px 0 20px !important;
 }
 
 .section2 {
-    margin: 0;
     background-color: #ffdaf9 !important;
-    padding: 20px 20px 0 20px !important;
 }
 
 .section3 {
-    margin: 0;
     background-color: #d9fcfd !important;
-    padding: 20px 20px 0 20px !important;
 }
 
 .section1, .section2, .section3 {
-    padding-bottom: 20px !important;
+    margin-bottom: 20px;
+    padding: 20px;
+    border: 2px solid #000;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
 }
 
 .rightText {
